  over-riding the last parameter starting with the 12th parameter
  (named param-10). You may now add as many parameters as you wish.
- Bug 2021: Forbid adding an Agent with the same name as the recipe
  from which you are adding it.
- Bug 2021: When editing the Agent name parameter in a Complete Agent
  or Component Collection recipe, reject names the same as the recipe
  name.

Release 9.4.1.1:
This release includes bug fixes to support the Fall 2002 Ultra*Log
integration, not found in time for the 9.4.1 release.
CSMART fixes include multiple usability enhancements.

Significant Bugs fixed:
- Remove the default Global Command Line argument to load Message
  Transport aspects (org.cougaar.message.transport.aspects) - these
  should be loaded through Recipes now. (Bug 1944)
- When adding an Agent in the Configuration Builder, and empty (all
  spaces) name means to cancel the addition. Trim excess whitespace
  off of agent names. (bug 1882)
- Changing the value of a property in the Configuration Builder from
  null to not-null gave an NPE. (bug 1885)
- Do not allow empty host or node names in Experiment Builder,
  trimming any excess spacess off the names. (bug 1890)
- When querying for a file, selecting none means to cancel the
  action. Additionally, closing the window means to cancel. And if
  trying to read in a file, complain if the file does not exist. (bugs
  1894, 1893 - initializing a society from files, 1895 - importing HNA,
  1899 - importing communities, 1906 - reading Java properties file)
- Do not allow empty Attribute IDs when editing communities. (bug
  1905)
- Do not allow empty community names, trimming excess whitespace. (bug 1900)
- When editing an Agent in the Configuration Builder, do not allow
  removing the AssetData folder, since it cannot be re-added. To not
  include an Organization or Entity asset, simply leave out the
  OrgData and OrgReport Plugins (or AssetData, etc), and remove any
  PropertyGroups and Relationships. (bug 1883)