@@ -98,6 +98,7 @@ save behavior (bug 2002).
 - Bug 2021: When editing the Agent name parameter in a Complete Agent
   or Component Collection recipe, reject names the same as the recipe
   name.
+- Bug 2064: Sort recipe target queries by name in drop-down lists.
 
 Release 9.4.1.1:
 This release includes bug fixes to support the Fall 2002 Ultra*Log
